<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/bz">

    <ImageView
        android:id="@+id/image_signup_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo_" />

    <TextView
        android:id="@+id/tv_logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_signup_logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/logo_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_logoText"
            android:drawableStart="@drawable/ic_user"
            android:gravity="start"
            android:hint="@string/et_user"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="16dp"
        android:hint="@string/et_email"
        android:textSize="16sp"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"/>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        app:hintAnimationEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        android:drawablePadding="8dp"
        app:passwordToggleTint="@color/colorAccent">
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:hint="@string/et_password"
        android:textSize="16sp"
        android:gravity="start"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_input_password"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        app:hintAnimationEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        android:drawablePadding="8dp"
        app:passwordToggleTint="@color/colorAccent">
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_input_password"
        android:hint="@string/et_confirm_password"
        android:textSize="16sp"
        android:gravity="start"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_input_confirm_password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_register"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:padding="16dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_already"
        android:textColor="#000000"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_already_account"
        android:layout_below="@id/btn_register"
        android:text="@string/tv_login"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"/>
</RelativeLayout>